# fznparser

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  config.hpp.in
.github/workflows/: cmake.yml  ubuntu.yml
cmake/: ExternalAntlr4Cpp.cmake  get_cpm.cmake
cmake/antlr4/: FindANTLR.cmake
fzn-models/: car_sequencing.fzn  magic_square.fzn  tsp_alldiff.fzn
include/: constraint.hpp  maps.hpp  variable.hpp
include/constraints/: alldifferent.hpp  array.hpp  circuit.hpp  integer_simple_2.hpp  reified.hpp
include/fznparser/: annotation.hpp  annotationCollection.hpp  arguments.hpp  ast.hpp  constraint.hpp  domain.hpp  except.hpp  grammar.hpp  grammar_ast.hpp  grammar_def.hpp  indexSet.hpp  intSet.hpp  model.hpp  modelFactory.hpp  parameter.hpp  parser.hpp  predicate.hpp  solveType.hpp  toString.hpp  types.hpp  variable.hpp  variables.hpp  writer.hpp
include_private/fznparser/parser/: grammar.hpp  grammarAst.hpp  grammarDef.hpp  grammar_ast.hpp  grammar_def.hpp  toString.hpp
include_private/fznparser/transformer/: modelTransformer.hpp  replaceParameters.hpp
include_private/fznparser/validate/: validate.hpp
source/: FznVisitor.cpp  FznVisitor.h  FznVisitor.hpp  constraint.cpp  constraint.hpp  invariantstructure.cpp  invariantstructure.hpp  main.cpp  maps.cpp  model.cpp  model.hpp  modelfactory.cpp  schemes.cpp  schemes.hpp  statistics.cpp  statistics.hpp  structure.cpp  structure.hpp  variable.cpp  variable.hpp
source/constraints/: alldifferent.cpp  array.cpp  bool.cpp  bool.hpp  circuit.cpp  element.cpp  element.hpp  global_cardinality.cpp  global_cardinality.hpp  int_lin_eq.cpp  int_lin_eq.hpp  integer_simple_2.cpp  integer_simple_3.cpp  integer_simple_3.hpp  reified.cpp  set.cpp  set.hpp
src/: FlatZinc.g4  fznVisitor.cpp  fznVisitor.hpp  model.cpp  modelFactory.cpp
src/constraints/: alldifferent.cpp  array.cpp  bool.cpp  circuit.cpp  element.cpp  global_cardinality.cpp  int_lin_eq.cpp  integer_simple_2.cpp  integer_simple_3.cpp  inverse.cpp  reified.cpp  set.cpp
src/fznparser/: annotation.cpp  arguments.cpp  constraint.cpp  contraint.cpp  grammar_ast.cpp  model.cpp  modelFactory.cpp  parser.cpp  solveType.cpp  toString.cpp  types.cpp  variables.cpp  writer.cpp
src/fznparser/parser/: toString.cpp
src/fznparser/transformer/: modelTransformer.cpp  replaceParameters.cpp
test/: CMakeLists.txt  CMakePresets.json  flatten.py
test/source/: dummyTest.cpp  modelfactorytest.cpp
test/src/: expect_eq.cpp  expect_eq.hpp  main.cpp  tIsFixed.cpp  tModelFactoryTest.cpp  tModelFactoryTest.hpp  tModelTest.cpp  tModels.cpp  tModels.hpp  tMznChallenge.cpp  tMznChallenge.hpp  tParser.cpp  tParser.hpp  tStubs.hpp  testData.cpp  testData.hpp  test_data.cpp  test_data.hpp
test/src/parser/: expectEq.cpp  expectEq.hpp  expect_eq.cpp  expect_eq.hpp  tGrammarRules.cpp  tGrammarRules.hpp  tModelFactoryTest.hpp  tStubs.cpp  tStubs.hpp  test_data.cpp  test_data.hpp
test/src/transformer/: tModelTransformer.cpp  tModelTransformer.hpp
test/stubs/: annotations.fzn  bool-domain.fzn  comments.fzn  constraints.fzn  identifier.fzn  interval-domain.fzn  maximise-objective.fzn  minimize_objective.fzn  multi-dimensional-array.fzn  parameters.fzn  predicates.fzn  set-constraint-argument.fzn  set-domain.fzn  test-model-1.fzn  test-model-2.fzn  test-model-3.fzn  test-model-4.fzn  test-model-5.fzn  variable-arrays.fzn  variables.fzn
